--- a/src/styles/virtualCardDetails.scss
+++ b/src/styles/virtualCardDetails.scss
@@ -30,6 +30,7 @@
   border: 1px solid #ffa500;
   transform-style: preserve-3d;
   transition: transform 1s ease;
+  z-index: 1;
 
   &:hover {
     transform: scale(1.05);
@@ -45,6 +46,7 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   line-height: 20px;
+  z-index: 1;
 
   &:hover {
     opacity: 0.8;
@@ -59,12 +61,14 @@
   margin: 60px 30px;
   display: flex;
   gap: 14px;
+  z-index: 2;
 }
 
 .right {
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 2;
 }
 
 .business {
@@ -72,6 +76,7 @@
   margin-bottom: 25px;
   color: #FFFFFF;
   font-weight: 400;
+  z-index: 2;
 }
 
 .service {
@@ -82,12 +87,14 @@
   line-height: 8px;
   text-align: right;
   color: #d2cbcbee;
+  z-index: 2;
 }
 
 .black-line {
   height: 32px;
   width: 100%;
   background-color: black;
+  z-index: 2;
 }
 
 .flipped {
@@ -104,6 +111,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  z-index: 2;
 }
 
 .back {
